--- a/Score Counter/style.css
+++ b/Score Counter/style.css
@@ -5,3 +5,55 @@ body{
     padding: 0;
 
 }
+
+.main-container{
+    
+    background-color: blue;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    
+}
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    height: 25rem;
+    width: 25rem;
+    
+    padding-top: 2em;
+}
+
+.counter-container{
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+   
+    
+   
+    
+}
+
+.counter{
+    
+    font-size: 80px;
+}
+.hifun{
+    padding-top: 70px;
+    font-size: 80px;
+    
+}
+
+.btn{
+    background-color: rgb(241, 25, 25);
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+
+}
