--- a/Score Counter/style.css
+++ b/Score Counter/style.css
@@ -8,7 +8,7 @@ body{
 
 .main-container{
     
-    background-color: blue;
+    background-color: rgb(47, 47, 49);
     display: flex;
     justify-content: center;
     align-items: center;
